gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,16 @@
 }
 
 .step-description {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 1.8;
 }
 
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .step-img {
-  width: 30%;
+  width: 35%;
 }
